# pouch-network-provisioning

./: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
.github/workflows/: ci.yml  release.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  shared-debug.keystore
android/app/src/androidTest/kotlin/io/golioth/pouchprov/app/: HardwareProvisioningTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/golioth/pouchprov/app/: DeviceScreen.kt  GoliothCertProvider.kt  MainActivity.kt  ProvViewModel.kt  ScanScreen.kt  SettingsScreen.kt
android/app/src/main/res/values/: themes.xml
android/gradle/: libs.versions.toml
android/pouchprov-ble/: build.gradle.kts  consumer-rules.pro
android/pouchprov-ble/src/main/: AndroidManifest.xml
android/pouchprov-ble/src/main/kotlin/io/golioth/pouchprov/ble/: BleTransport.kt  BleUuids.kt  GattClient.kt  PouchProvDevice.kt  PouchProvManager.kt
android/pouchprov-core/: build.gradle.kts
android/pouchprov-core/src/main/kotlin/io/golioth/pouchprov/: Auth.kt  Flows.kt  Messages.kt  Pem.kt
android/pouchprov-core/src/main/kotlin/io/golioth/pouchprov/cbor/: Cbor.kt
android/pouchprov-core/src/main/kotlin/io/golioth/pouchprov/cert/: DeviceCert.kt
android/pouchprov-core/src/test/kotlin/io/golioth/pouchprov/: FlowsMockTest.kt  GoldenVectorsTest.kt  MockDeviceTransport.kt  SaeadTest.kt  SarTest.kt  SecurityNameTest.kt
cddl/: prov.cddl
cli/: README.md  pyproject.toml
cli/src/pouchprov/: __init__.py  auth.py  codec.py  flows.py  golioth.py  main.py  session.py  state.py  tofu.py
cli/src/pouchprov/pouchlink/: cert.py  info.py  pouch.py  saead.py  sar.py
cli/src/pouchprov/transport/: __init__.py  base.py  ble.py  mock.py
cli/tests/: test_auth.py  test_cert.py  test_codec.py  test_ctrl.py  test_flows_cred.py  test_flows_cred_only.py  test_flows_wifi.py  test_golioth.py  test_mint_cli.py  test_pouch_frame.py  test_provision_e2e.py  test_saead.py  test_saead_vectors.py  test_sar.py  test_session_mock.py  test_session_secure.py  test_tofu.py
docs/: clients.md  golioth-demo-certs.md  hardware-testing.md  protocol.md  upstream-pouch.md
include/pouch_prov/: credentials.h  events.h  manager.h
include/pouch_prov/test/: fake_wifi.h
ios/: README.md
ios/PouchProv/: Package.resolved  Package.swift
ios/PouchProv/Sources/PouchProvBLE/: BleTransport.swift  BleUuids.swift  GattClient.swift  PouchProvDevice.swift  PouchProvManager.swift
ios/PouchProv/Sources/PouchProvCore/: AsyncSupport.swift  Auth.swift  Cbor.swift  DeviceCert.swift  Flows.swift  Messages.swift  Pem.swift  Pouch.swift  ProvSession.swift  Saead.swift  Sar.swift  Tofu.swift  Transport.swift
ios/PouchProv/Tests/PouchProvCoreTests/: DeviceCertTests.swift  FlowsMockTests.swift  GoldenVectorsTests.swift  MockDeviceTransport.swift  SaeadTests.swift  SarTests.swift  SecurityNameTests.swift  TestVectors.swift  TofuTests.swift
ios/PouchProvApp/: Info.plist  project.yml
ios/PouchProvApp/Sources/: AppViewModel.swift  DeviceScreen.swift  GoliothCertProvider.swift  PouchProvApp.swift  ScanScreen.swift  SettingsScreen.swift
samples/basic/: CMakeLists.txt  Kconfig  prj.conf  saead.conf  wifi.conf
samples/basic/boards/: nrf52840dk_nrf52840.conf
samples/basic/src/: main.c
samples/cred_only/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
samples/cred_only/boards/: nrf52840dk_nrf52840.conf
samples/cred_only/src/: main.c
samples/golioth_bootstrap/: CMakeLists.txt  prj.conf  sample.yaml
samples/golioth_bootstrap/src/: main.c
scripts/: gen_vectors.py  vectors_to_c.py
sim/wifi/: CMakeLists.txt  Kconfig  fake_wifi.c
src/: adv.c  cred_store.c  dispatch.c  identity.c  manager.c  pouch_prov_internal.h  rpc.c
src/codec/: prov_decode.c  prov_encode.c
src/codec/include/: prov_decode.h  prov_encode.h  prov_types.h
src/handlers/: auth.c  cred.c  ctrl.c  version.c  wifi_config.c  wifi_scan.c
tests/bsim/ble_smoke/: CMakeLists.txt  prj.conf  sysbuild.cmake  testcase.yaml
tests/bsim/ble_smoke/pytest/: conftest.py  test_ble_smoke.py
tests/bsim/ble_smoke/src/: main.c
tests/bsim/peripheral/: CMakeLists.txt  prj.conf
tests/bsim/peripheral/src/: main.c
tests/codec/: CMakeLists.txt  prj.conf  testcase.yaml
tests/codec/src/: main.c  vectors.inc
tests/cred_store/: CMakeLists.txt  mbedtls_user_config.h  prj.conf  testcase.yaml
tests/cred_store/src/: main.c  test_cert.inc
tests/vectors/: pouch_frames.json  prov_messages.json  saead_kdf.json
tests/wifi_handlers/: CMakeLists.txt  prj.conf  testcase.yaml
tests/wifi_handlers/src/: main.c
zephyr/: module.yml
(+7 files in other folders)
