[project]
name = "pouch-prov"
version = "0.1.0"
description = "Network provisioning CLI for devices speaking the pouch protocol"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Jonathan Beri" }]
dependencies = [
    "bleak>=0.22",
    "cbor2>=5.6",
    "click>=8.1",
    "cryptography>=43",
]

[project.scripts]
pouchprov = "pouchprov.main:cli"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pouchprov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
